--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,9 +27,9 @@ services:
   db:
     image: postgres:15
     environment:
-      POSTGRES_DB: ${DB_DATABASE}
-      POSTGRES_USER: ${DB_USERNAME}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: artisan #change to your db.
+      POSTGRES_USER: postgres #db username.
+      POSTGRES_PASSWORD: postgres #db password.
     volumes:
       - pg_data:/var/lib/postgresql/data
     ports:
